--- a/wsb_ResponsiveMenu/index.html
+++ b/wsb_ResponsiveMenu/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Parallax - Basic</title>
+    <meta
+      name="viewport"
+      content="user-scalable=no, width=device-width, initial-scale=1.0"
+    />
+    <title>Parallax - Responsive</title>
     <link
       href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i'"
       rel="stylesheet"
@@ -13,13 +16,19 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <script defer src="basic.js"></script>
+    <script defer src="responsive.js"></script>
   </head>
   <body>
     <nav id="nav">
       <h1>WEB'S</h1>
-      <ul>
-        <li><a href="#section1">menu1</a></li>
+      <div class="mNav">
+        <div class="icon-wrap">
+          <div class="icon"></div>
+        </div>
+      </div>
+
+      <ul class="menu">
+        <li class="active"><a href="#section1">menu1</a></li>
         <li><a href="#section2">menu2</a></li>
         <li><a href="#section3">menu3</a></li>
         <li><a href="#section4">menu4</a></li>
