--- a/wsb_SideMenu/index.html
+++ b/wsb_SideMenu/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Parallax - Menu</title>
+    <meta
+      name="viewport"
+      content="user-scalable=no, width=device-width, initial-scale=1.0"
+    />
+    <title>Parallax - Responsive</title>
     <link
       href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i'"
       rel="stylesheet"
@@ -13,11 +16,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <script defer src="main.js"></script>
+    <script defer src="sidemenu.js"></script>
   </head>
   <body>
-    <nav id="nav">
-      <h1>WEB'S</h1>
+    <nav id="side-nav">
+      <h1>WEBSTORYBOY</h1>
       <ul>
         <li class="active"><a href="#section1">menu1</a></li>
         <li><a href="#section2">menu2</a></li>
@@ -26,26 +29,27 @@
         <li><a href="#section5">menu5</a></li>
         <li><a href="#section6">menu6</a></li>
       </ul>
+      <a href="#" class="navBtn">Open</a>
     </nav>
 
     <div id="contents">
       <div id="section1">
-        <h2>Time is <strong>gold</strong></h2>
+        <h2>피할 수 없으면 <strong>즐겨라!</strong></h2>
       </div>
       <div id="section2">
-        <h2>Seeing is <strong>believing</strong></h2>
+        <h2>삶이 있는 한 <strong>희망</strong>은 있다.</h2>
       </div>
       <div id="section3">
-        <h2>Asking costs <strong>nothing</strong></h2>
+        <h2>시간은 <strong>금이다.</strong></h2>
       </div>
       <div id="section4">
-        <h2><strong>Better</strong> is to bow than break</h2>
+        <h2>먼저핀 꽃은 <strong>먼저진다.</strong></h2>
       </div>
       <div id="section5">
-        <h2><strong>Habit</strong> is second nature</h2>
+        <h2>내일은 내일의 <strong>태양이 뜬다.</strong></h2>
       </div>
       <div id="section6">
-        <h2>Pain past is <strong>pleasure</strong></h2>
+        <h2>모든 인생은 <strong>실험이다.</strong></h2>
       </div>
     </div>
 
