--- a/wsb_StickyMenu/index.html
+++ b/wsb_StickyMenu/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="user-scalable=no, width=device-width, initial-scale=1.0"
     />
-    <title>Parallax - Side Menu</title>
+    <title>Parallax - Sticky Menu</title>
     <link
       href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i'"
       rel="stylesheet"
@@ -16,12 +16,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <script defer src="sidemenu.js"></script>
+    <script defer src="sticky.js"></script>
   </head>
   <body>
-    <nav id="side-nav">
-      <h1>WEBSTORYBOY</h1>
-      <ul>
+    <nav id="nav">
+      <h1>WEB'S</h1>
+      <ul class="menu">
         <li class="active"><a href="#section1">menu1</a></li>
         <li><a href="#section2">menu2</a></li>
         <li><a href="#section3">menu3</a></li>
@@ -29,18 +29,17 @@
         <li><a href="#section5">menu5</a></li>
         <li><a href="#section6">menu6</a></li>
       </ul>
-      <a href="#" class="navBtn">Open</a>
     </nav>
 
     <div id="contents">
       <div id="section1">
-        <h2>피할 수 없으면 <strong>즐겨라!</strong></h2>
+        <h2>시간은 <strong>금이다.</strong></h2>
       </div>
       <div id="section2">
-        <h2>삶이 있는 한 <strong>희망</strong>은 있다.</h2>
+        <h2>피할 수 없으면 <strong>즐겨라!</strong></h2>
       </div>
       <div id="section3">
-        <h2>시간은 <strong>금이다.</strong></h2>
+        <h2>삶이 있는 한 <strong>희망</strong>은 있다.</h2>
       </div>
       <div id="section4">
         <h2>먼저핀 꽃은 <strong>먼저진다.</strong></h2>
